tests/test137.rael.exp
Error [tests/test137.rael:1:32]: Invalid range for slicing
| log { 1, 2, 3, 4, 5, 6, 7 } at (-1 to -3)
|                                ^
